feat: peer information is changed from being stored in metrics to being stored in mysql (#2654)
